--- a/ToDo.html
+++ b/ToDo.html
@@ -7,7 +7,7 @@
 <body>
 <input type="text" id="text">
 <ol id="list">
-    <li>ddd</li>
+    <li>dadwadwadawdawdawdwad</li>
 </ol>
 <script>
     debugger;
@@ -18,6 +18,9 @@
         alert(z);
         x.appendChild(z);
         document.getElementById("list").appendChild(x);
-})</script>
+})
+    function add(a,b){
+    return a+b;
+    }</script>
 </body>
 </html>
