Add a div funciton

--- a/ToDo.html
+++ b/ToDo.html
@@ -11,6 +11,9 @@
 </ol>
 <script>
     debugger;
+    function div(a,b){
+        return a/b;
+    }
     document.getElementById("text").addEventListener('change', function () {
     alert("sda");
         let x=document.createElement('li');
