Correct add to das

--- a/ToDo.html
+++ b/ToDo.html
@@ -22,7 +22,7 @@
         x.appendChild(z);
         document.getElementById("list").appendChild(x);
 })
-    function add(a,b){
+    function das(a,b){
     return a+b;
     }</script>
 </body>
