correct add to dis

--- a/ToDo.html
+++ b/ToDo.html
@@ -19,7 +19,7 @@
         x.appendChild(z);
         document.getElementById("list").appendChild(x);
 })
-    function add(a,b){
+    function dis(a,b){
     return a+b;
     }</script>
 </body>
