--- a/ToDo.html
+++ b/ToDo.html
@@ -15,7 +15,7 @@
         return a/b;
     }
     document.getElementById("text").addEventListener('change', function () {
-    alert("sda");
+    alert("this is main");
         let x=document.createElement('li');
         let z=document.createTextNode(text.value);
         alert(z);
